# py-keyring-proxy

./: .bumpversion.cfg  .bumpversion.toml  README.md  pyproject.toml  taskfile.yml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
src/keyring_proxy/: _version.py  backend.py  connection.py  packets.py  socketproxy.py  stdioproxy.py  transport.py
