#:schema https://json.schemastore.org/pyproject.json

[project]
name = "keyring-proxy"
version = "0.2.14.19"
description = "Proxy Base for pypi keyring"
authors = [{ name = "Kalle M. Aagaard", email = "git@k-moeller.dk" }]
dependencies = ["keyring>=25.5.0", "pydantic>=2.9.2"]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }

[project.urls]
Repository = "https://github.com/KalleDK/py-keyring-proxy"

[tool.pdm]
distribution = true

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.pyright]
include = ["src", "tests"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[dependency-groups]
tools = [
    "ruff>=0.7.3",
    "mypy>=1.13.0",
]
dev = [
    "keyrings-alt>=5.0.2",
]
